# pubmed_project

./: README.md  acne.csv  corona.csv  diabetes_results.csv  eye_issues_filtered.csv  fetch_pubmed.py  hairfall.csv  heart_results.csv  joint_pain_results.csv  my_results.csv  periodcramp.csv  pubmed_eye_sight_articles.csv  pyproject.toml  ulcers.csv
