[project]
name = "pubmed-project"
version = "0.1.0"
description = "Fetch PubMed research papers"
authors = [
    {name = "Roshitha",email = "76120346+roshitapatnaik@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "metapub (>=0.5.12,<0.6.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
